Build docker image from openjdk:14-alpine