@@ -1,4 +1,4 @@
-FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
+FROM openjdk:14-alpine
 
 RUN apk --no-cache add curl
 
@@ -7,4 +7,4 @@ COPY target/classes/logback*.xml /conf/
 
 EXPOSE 8080
 
-CMD java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar rawdata-converter.jar
+CMD java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} --enable-preview -jar rawdata-converter.jar
